--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,81 @@
     box-sizing: border-box;
 }
 
-.cardArea {
+body {
+    background-color: black;
+}
+
+#headBar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent;
+}
+
+#headBar img {
+    margin-top: 20px;
+}
+
+#searchContainer input {
+    width: 800px;
+    height: 45px;
+    font-size: large;
+}
+
+#searchContainer button {
+    width: 50px;
+    height: 45px;
+    color: #dc4d2e;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid white;
+}
+
+#headBar p {
+    color: white;
+    color: #dc4d2e;
+    background-color: transparent;
+}
+
+#cardContainer {
+    padding: 2% 10%;
+    justify-items: center;
+}
+
+#cardContainer #cardArea {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    justify-items: center;
+    gap: 20px;
     list-style: none;
+    height: auto;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
+#cardContainer .movieCard {
+    background-color: transparent;
+    border-radius: 10px;
+    border: 5px white solid;
+    text-align: center;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
 }
 
-#mainContent {
-    position: relative;
-    background-color: white;
-    margin: 15% auto;
-    padding: 20px;
-    width: 70%;
+#cardContainer .poster {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
-.close {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    font-size: 30px;
-    cursor: pointer;
+#cardContainer .title {
+    color: white;
+    font-size: 20px;
+}
+
+#cardContainer .title img {
+    padding: 5px;
+}
+
+#cardContainer .voteAvg {
+    color: white;
+    font-size: 15px;
 }
