--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,12 @@ body {
 }
 
 /* 카드 css */
-#cardContainer {
+main {
     padding: 2% 10%;
     justify-items: center;
 }
 
-#cardContainer #cardArea {
+#cardArea {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     justify-items: center;
@@ -57,7 +57,7 @@ body {
     height: auto;
 }
 
-#cardContainer .movieCard {
+.movieCard {
     background-color: transparent;
     border-radius: 10px;
     border: 5px white solid;
@@ -65,18 +65,18 @@ body {
     width: 100%;
 }
 
-#cardContainer .poster {
+.poster {
     width: 100%;
     aspect-ratio: 3 / 4;
     object-fit: cover;
 }
 
-#cardContainer .title {
+.title {
     color: white;
     font-size: 1.2rem;
 }
 
-#cardContainer .voteAvg {
+.voteAvg {
     color: white;
     font-size: 1rem;
     padding: 5px;
