--- a/css/modal.css
+++ b/css/modal.css
@@ -1,19 +1,9 @@
 #modal {
-    /* display: none; */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-#modalContent {
-    position: relative;
-    background-color: white;
-    margin: 15% auto;
-    padding: 20px;
     width: 50%;
+}
+#modal img {
+    width: 100%;
+    height: auto;
 }
 
 #close {
