코드 수정 및 검색결과 없음 문구 추가!

--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,9 @@ main {
     font-size: 1rem;
     padding: 5px;
 }
+
+#cardArea p {
+    position: absolute;
+    color: white;
+    font-size: 1.7rem;
+}
