검색결과 없음 css및 코드 수정

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ main {
     padding: 5px;
 }
 
-#cardArea p {
+#cardArea .searchResultNo {
     position: absolute;
     color: white;
     font-size: 1.7rem;
