--- a/css/modal.css
+++ b/css/modal.css
@@ -1,15 +1,27 @@
 #modal {
-    width: 50%;
+    position: absolute;
+    top: 25%;
+    left: 19%;
+    width: 60%;
+    height: 60%;
+    border-radius: 8px;
 }
+
+#modal::backdrop {
+    background-color: #d74e2c;
+    opacity: 0.2;
+}
+
 #modal img {
-    width: 100%;
-    height: auto;
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
 }
 
 #close {
     position: absolute;
     right: 20px;
     top: 10px;
-    font-size: 30px;
+    font-size: 50px;
     cursor: pointer;
 }
