--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Do Hyeon", serif;
 }
 
 body {
-    background-color: black;
+    background-color: #cccccc;
 }
 
 /* 헤더 css */
@@ -24,7 +25,9 @@ body {
 #searchContainer input {
     width: 800px;
     height: 45px;
-    font-size: large;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 2px solid black;
 }
 
 #searchContainer button {
@@ -33,7 +36,8 @@ body {
     color: #dc4d2e;
     background-color: transparent;
     border-radius: 10px;
-    border: 2px solid white;
+    border: 2px solid black;
+    cursor: pointer;
 }
 
 #headBar p {
@@ -58,9 +62,9 @@ main {
 }
 
 .movieCard {
-    background-color: transparent;
+    background-color: white;
     border-radius: 10px;
-    border: 5px white solid;
+    border: 2px black solid;
     text-align: center;
     width: 100%;
 }
@@ -68,22 +72,22 @@ main {
 .poster {
     width: 100%;
     aspect-ratio: 3 / 4;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .title {
-    color: white;
-    font-size: 1.2rem;
+    color: black;
+    font-size: 1rem;
 }
 
 .voteAvg {
-    color: white;
-    font-size: 1rem;
+    color: black;
+    font-size: 0.8rem;
     padding: 5px;
 }
 
 #cardArea .searchResultNo {
     position: absolute;
-    color: white;
+    color: black;
     font-size: 1.7rem;
 }
