--- a/css/card-style.css
+++ b/css/card-style.css
@@ -11,6 +11,7 @@ main {
     gap: 20px;
     list-style: none;
     height: auto;
+    cursor: pointer;
 }
 
 .movieCard {
@@ -28,13 +29,16 @@ main {
 }
 
 .title {
+    text-align: start;
+    margin-left: 8px;
     color: black;
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 
 .voteAvg {
+    text-align: start;
     color: black;
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding: 5px;
 }
 
